--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,13 +62,14 @@ dependencies {
 
     //测试
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4-alpha05'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha05'
 
     //room和life cycle数据库
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha05'
     kapt "androidx.room:room-compiler:$room_version"
     //FIXME
     // compileOnly 'com.github.pengrad:jdk9-deps:1.0'
