--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         minSdk 21
         targetSdk 32
         versionCode 1
-        versionName "1.5"
+        versionName "1.5-variant1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
